// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render NOT compacted when there are 3 or more pages 1`] = `
<div
  class="pf-c-pagination"
  id="pagination-options-menu"
>
  <div
    class="pf-c-pagination__total-items"
  >
    <b>
      1
       - 
      1
    </b>
     
    of 
    <b>
      5
    </b>
     
    
  </div>
  <div
    class="pf-c-options-menu"
  >
    <div
      class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
    >
      <span
        class="pf-c-options-menu__toggle-text"
      >
        <b>
          1
           - 
          1
        </b>
         
        of 
        <b>
          5
        </b>
         
        
      </span>
      <button
        aria-expanded="false"
        aria-label="Items per page"
        class="  pf-c-options-menu__toggle-button"
        id="pagination-options-menu-toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            transform=""
          />
        </svg>
      </button>
    </div>
  </div>
  <nav
    aria-label="Pagination"
    class="pf-c-pagination__nav"
  >
    <button
      aria-label="Go to first page"
      class="pf-c-button pf-m-plain"
      data-action="first"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 448 512"
        width="1em"
      >
        <path
          d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
          transform=""
        />
      </svg>
    </button>
    <button
      aria-label="Go to previous page"
      class="pf-c-button pf-m-plain"
      data-action="previous"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          transform=""
        />
      </svg>
    </button>
    <div
      class="pf-c-pagination__nav-page-select"
    >
      <input
        aria-label="Current page"
        class="pf-c-form-control"
        max="5"
        min="1"
        type="number"
        value="1"
      />
      <span
        aria-hidden="true"
      >
        of 
        5
      </span>
    </div>
    <button
      aria-label="Go to next page"
      class="pf-c-button pf-m-plain"
      data-action="next"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          transform=""
        />
      </svg>
    </button>
    <button
      aria-label="Go to last page"
      class="pf-c-button pf-m-plain"
      data-action="last"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 448 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
          transform=""
        />
      </svg>
    </button>
  </nav>
</div>
`;

exports[`should render compacted when there are 1-2 pages only 1`] = `
<div
  class="pf-c-pagination pf-m-compact"
  id="pagination-options-menu"
>
  <div
    class="pf-c-pagination__total-items"
  >
    <b>
      1
       - 
      5
    </b>
     
    of 
    <b>
      5
    </b>
     
    
  </div>
  <div
    class="pf-c-options-menu"
  >
    <div
      class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
    >
      <span
        class="pf-c-options-menu__toggle-text"
      >
        <b>
          1
           - 
          5
        </b>
         
        of 
        <b>
          5
        </b>
         
        
      </span>
      <button
        aria-expanded="false"
        aria-label="Items per page"
        class="  pf-c-options-menu__toggle-button"
        id="pagination-options-menu-toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            transform=""
          />
        </svg>
      </button>
    </div>
  </div>
  <nav
    aria-label="Pagination"
    class="pf-c-pagination__nav"
  >
    <button
      aria-label="Go to previous page"
      class="pf-c-button pf-m-plain"
      data-action="previous"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          transform=""
        />
      </svg>
    </button>
    <button
      aria-label="Go to next page"
      class="pf-c-button pf-m-plain"
      data-action="next"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          transform=""
        />
      </svg>
    </button>
  </nav>
</div>
`;
